# Proyecto-Mecanica-Celeste

./: Datos.ipynb  README.md  TEST_PUSH.md  mecanica_celeste_setup.ipynb  pyproject.toml  requirements.txt  retroalimentacion-1027801266-calle_munoz_sara.md
